fixed the play bar and make it fixed, added a new class, fixed the side bar overflow

--- a/css/style.css
+++ b/css/style.css
@@ -107,6 +107,7 @@ main {
     background-color: var(--color-black);
     color: var(--color-light-grey);
     padding-bottom: 10px;
+    overflow: hidden;
 }
 
 #card-container {
@@ -175,6 +176,10 @@ main {
     border-left: 3px solid var(--color-highlight);
 } 
 
+.bg-black {
+    background-color: var(--color-black);
+}
+
 /* main content */
 
 #card-container li {
@@ -240,10 +245,14 @@ section:nth-child(5) .section-main-title {
 /* play bar */
 
 #play-bar {
+    position: fixed;
     width: 100%;
     height: 90px;
     background-color: var(--color-dark-grey);
     padding: 15px 15px;
+    bottom: 0;
+    left: 0;
+    z-index: 1000;
 }
 
 #play-bar img {
